--- a/setup.cfg
+++ b/setup.cfg
@@ -3,12 +3,10 @@ name = crystgrowthpoly
 version = 0.0.1
 author = Jakub Malinowski
 author_email = jakubbmalinowski@gmail.com
-description = Package for calculating crystallographic growth polynomials
+description = Package dedicated to growth functions of periodic tessellations
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
-project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+url = https://github.com/Malinon/crystgrowthfunctions
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
